--- a/cards/a/area/area.tex
+++ b/cards/a/area/area.tex
@@ -3,7 +3,7 @@
 \usepackage{graphicx}
 \usepackage{geometry}
 
-\geometry{a4paper, landscape, margin=0.2in}
+\geometry{a4paper, landscape}
 \cardfrontstyle[\large\slshape]{headings}
 \cardbackstyle{empty}
 
@@ -15,11 +15,26 @@
 \renewcommand{\cardcolumns}{2}
 \setlength{\cardheight}{3.5in}
 \setlength{\cardwidth}{5.0in}
-\setlength{\topoffset}{0.50in}
-\setlength{\oddoffset}{0.50in}
-\setlength{\evenoffset}{0.50in}
+\setlength{\topoffset}{0.65in}
+\setlength{\oddoffset}{0.65in}
+\setlength{\evenoffset}{0.65in}
 
 \begin{flashcard}{area}
+    \vspace*{\fill}
+    \begin{center}
+        \begin{minipage}[c]{.45\textwidth}
+            \includegraphics[width=\textwidth]{cards/a/area/area - A big library with various sections, and people are gathered for reading.png}
+        \end{minipage}
+        \begin{minipage}[c]{.45\textwidth}
+            \begin{itemize}\setlength\itemsep{12pt}
+            \item Explanation: \ A part or section within a larger place
+
+            \item Example: \ A big library with various sections, and people are gathered for reading
+            \end{itemize}
+        \end{minipage}
+    \end{center}
+    \vspace*{\fill}
+\end{flashcard}\begin{flashcard}{area}
     \vspace*{\fill}
     \begin{center}
         \begin{minipage}[c]{.45\textwidth}
@@ -60,21 +75,6 @@
             \item Explanation: \ A part or section within a larger place
 
             \item Example: \ a serene picnic area in a park with trees, benches, and a pond
-            \end{itemize}
-        \end{minipage}
-    \end{center}
-    \vspace*{\fill}
-\end{flashcard}\begin{flashcard}{area}
-    \vspace*{\fill}
-    \begin{center}
-        \begin{minipage}[c]{.45\textwidth}
-            \includegraphics[width=\textwidth]{cards/a/area/area - a bustling urban block with tall buildings, cars, and pedestrians walking on sidewalks.png}
-        \end{minipage}
-        \begin{minipage}[c]{.45\textwidth}
-            \begin{itemize}\setlength\itemsep{12pt}
-            \item Explanation: \ A part or section within a larger place
-
-            \item Example: \ a bustling urban block with tall buildings, cars, and pedestrians walking on sidewalks
             \end{itemize}
         \end{minipage}
     \end{center}
