--- a/cards/c/check/check.tex
+++ b/cards/c/check/check.tex
@@ -3,7 +3,7 @@
 \usepackage{graphicx}
 \usepackage{geometry}
 
-\geometry{a4paper, landscape, margin=0.2in}
+\geometry{a4paper, landscape}
 \cardfrontstyle[\large\slshape]{headings}
 \cardbackstyle{empty}
 
@@ -15,9 +15,9 @@
 \renewcommand{\cardcolumns}{2}
 \setlength{\cardheight}{3.5in}
 \setlength{\cardwidth}{5.0in}
-\setlength{\topoffset}{0.50in}
-\setlength{\oddoffset}{0.50in}
-\setlength{\evenoffset}{0.50in}
+\setlength{\topoffset}{0.65in}
+\setlength{\oddoffset}{0.65in}
+\setlength{\evenoffset}{0.65in}
 
 \begin{flashcard}{check}
     \vspace*{\fill}
